--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -139,3 +139,9 @@ eliminarJuego:
   controller: App\Controller\JuegoController::eliminarJuego
   requirements:
         id: '\d+'
+
+# Manejo de Juegos
+
+mensajes:
+  path: /mensajes
+  controller: App\Controller\AppController::mensajes
