--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,5 +35,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/usuarios$, roles: ROLE_ADMIN }
+        - { path: ^/noticias/(nueva|editar|eliminar), roles: ROLE_ADMIN }
+        - { path: ^/mensajes, roles: ROLE_ADMIN }
